--- a/Crypto/Crypto.csproj
+++ b/Crypto/Crypto.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.7.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="JWT" />
@@ -16,6 +17,7 @@
     <None Remove="Models\" />
     <None Remove="Services\" />
     <None Remove="Interfaces\" />
+    <None Remove="Microsoft.Azure.WebJobs.Extensions.DurableTask" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
