--- a/Gate/Gate.csproj
+++ b/Gate/Gate.csproj
@@ -6,12 +6,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Interfaces\" />
     <None Remove="Models\" />
     <None Remove="Services\" />
     <None Remove="Microsoft.Azure.Functions.Extensions" />
+    <None Remove="Microsoft.Extensions.Http" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
