--- a/Binance/Binance.csproj
+++ b/Binance/Binance.csproj
@@ -3,17 +3,23 @@
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.3" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Interfaces\" />
-    <None Remove="Models\" />
     <None Remove="Services\" />
+    <None Remove="Interfaces\" />
+    <None Remove="Binance.Spot" />
+    <None Remove="Microsoft.Extensions.DependencyInjection" />
+    <None Remove="AzureFunctions.Extensions.DependencyInjection" />
     <None Remove="Microsoft.Azure.Functions.Extensions" />
     <None Remove="Microsoft.Extensions.Http" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -25,9 +31,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
